--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,6 +1,6 @@
 /* app css stylesheet */
 
-.menu {
+/*.menu {
   list-style: none;
   border-bottom: 0.1em solid black;
   margin-bottom: 2em;
@@ -27,4 +27,21 @@
 .menu > li:nth-child(1):before {
   content: "";
   padding: 0;
+}*/
+main {
+  min-height: 50rem;
+}
+
+footer {
+  height: 10rem;
+  background-color: #1399bd;
+  font-weight: 777;
+}
+footer p {
+  padding-top: 4rem;
+  text-align: center;
+}
+footer span {
+  color: #fff;
+  padding: 0 .5rem;
 }
